# ci

./: .coverage  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
src/aplicacion/: app.py
src/app/: app.py
src/app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_app.py
