[metadata]
name = app
descripcion = hola mundo
author = Cerutti Lucia
plataforms = unix, linux, win32
classifiers =
    Programming Languaje :: Python :: 3

[options]
packages = 
    app
install_requires = 
    atomicwrites>=1.4.0
    attrs>=21.4.0
    click>=8.1.3
    colorama>=0.4.4
    Flask>=2.1.2
    importlib-metadata>=4.11.4
    iniconfig>=1.1.1
    itsdangerous>=2.1.2
    Jinja2>=3.1.2
    MarkupSafe>=2.1.1
    packaging>=21.3
    pluggy>=1.0.0
    py>=1.11.0
    pyparsing>=3.0.9
    tomli>=2.0.1
    Werkzeug>=2.1.2
    zipp>=3.8.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=7.1.2
    flake8>=3.9.2
    tox>=3.24.3
    pytest-cov>=2.12.1
    mypy>=0.910

[options.package_data]
app = py.typed

[flake8]
max-line-length = 160